--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body>
+    
     <div class="container">
 
      <h1 class="text-left">Shopping Cart</h1>
-
      <div class="row">
 
        <div class="col-12">
@@ -27,37 +27,37 @@
 
              <tr>
                <td class="name">Salmon</td>
-               <td class="price">$60.00</td>
-               <td class="quantity"> <label>QTY </label><input type="text" class="qty"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
-               <td class="subtotal">$60.00</td>
+               <td class="price">60.00</td>
+               <td class="quantity"><label>QTY </label><input type="text" class="qty" value="1"></input><button type="reset" value="cancel" class="cancel">Cancel</button></td>
+               <td class="subtotal"></td>
              </tr>
 
              <tr>
                <td class="name">Tuna</td>
-               <td class="price">$50.00</td>
-               <td class="quantity"><label>QTY </label><input type="text" class="qty"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
-               <td class="subtotal">$50.00</td>
+               <td class="price">50.00</td>
+               <td class="quantity"><label>QTY </label><input type="text" class="qty" value="3"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
+               <td class="subtotal"></td>
              </tr>
 
              <tr>
                <td class="name">Carp</td>
-               <td class="price">$50.00</td>
-               <td class="quantity"><label>QTY </label><input type="text" class="qty"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
-               <td class="subtotal">$50.00</td>
+               <td class="price">50.00</td>
+               <td class="quantity"><label>QTY </label><input type="text" class="qty" value="2"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
+               <td class="subtotal"></td>
              </tr>
 
              <tr>
                <td class="name">Pork</td>
-               <td class="price">$50.00</td>
-               <td class="quantity"><label>QTY </label><input type="text" class="qty"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
-               <td class="subtotal">$50.00</td>
+               <td class="price">50.00</td>
+               <td class="quantity"><label>QTY </label><input type="text" class="qty" value="2"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
+               <td class="subtotal"></td>
              </tr>
 
              <tr>
                <td class="name">Beef</td>
-               <td class="price">$40.00</td>
-               <td class="quantity"><label>QTY </label><input type="text" class="qty"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
-               <td class="subtotal">$40.00</td>
+               <td class="price">40.00</td>
+               <td class="quantity"><label>QTY </label><input type="text" class="qty" value="4"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
+               <td class="subtotal"></td>
              </tr>
 
              <tr>
@@ -66,18 +66,15 @@
                <td class="create"><button type="create" value="cancel">Create</button></td>
                <td></td>
              </tr>
-
          </table>
 
       <div class="text-right">
         <button type ="button" class ="btn btn-success" id ="calculate">Calculate Prices</button>
       </div>
 
-
-
          <div class="col-12 col-md-6">
            <h2 style="font-size: 35px">Total price:</h2>
-           <h2 style="font-size: 35px">$550.00</h2>
+           <h2 style="font-size: 35px">$<span id="totalPrice"></span></h2>
          </div>
 
        </div>
