--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body>
-    
+
     <div class="container">
 
      <h1 class="text-left">Shopping Cart</h1>
@@ -24,7 +24,6 @@
        <div class="col-12">
 
          <table class="table table-responsive">
-
              <tr>
                <td class="name">Salmon</td>
                <td class="price">60.00</td>
@@ -59,25 +58,22 @@
                <td class="quantity"><label>QTY </label><input type="text" class="qty" value="4"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
                <td class="subtotal"></td>
              </tr>
-
-             <tr>
-               <td class="name"><input type="text"></td>
-               <td class="price"><input type="text"></td>
-               <td class="create"><button type="create" value="cancel">Create</button></td>
-               <td></td>
-             </tr>
          </table>
 
-      <div class="text-right">
-        <button type ="button" class ="btn btn-success" id ="calculate">Calculate Prices</button>
-      </div>
+         <form class="col-12" id="addStock">
+                  <input name="name" type="text" placeholder="Name" required/>
+                  <input name="price" type="number" placeholder="Price"/>
+                  <input name="num" type="number" placeholder="Quantity"/>
+                  <button class="btn" id="add">add</button>
+                </form>
 
          <div class="col-12 col-md-6">
            <h2 style="font-size: 35px">Total price:</h2>
            <h2 style="font-size: 35px">$<span id="totalPrice"></span></h2>
          </div>
 
-       </div>
+          </div>
+
      </div>
    </div>
   </body>
