Added dollar sign

--- a/index.html
+++ b/index.html
@@ -26,35 +26,35 @@
          <table class="table table-responsive">
              <tr>
                <td class="name">Salmon</td>
-               <td class="price">60.00</td>
+               <td class="price">$60.00</td>
                <td class="quantity"><label>QTY </label><input type="text" class="qty" value="1"></input><button type="reset" value="cancel" class="cancel">Cancel</button></td>
                <td class="subtotal"></td>
              </tr>
 
              <tr>
                <td class="name">Tuna</td>
-               <td class="price">50.00</td>
+               <td class="price">$50.00</td>
                <td class="quantity"><label>QTY </label><input type="text" class="qty" value="3"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
                <td class="subtotal"></td>
              </tr>
 
              <tr>
                <td class="name">Carp</td>
-               <td class="price">50.00</td>
+               <td class="price">$50.00</td>
                <td class="quantity"><label>QTY </label><input type="text" class="qty" value="2"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
                <td class="subtotal"></td>
              </tr>
 
              <tr>
                <td class="name">Pork</td>
-               <td class="price">50.00</td>
+               <td class="price">$50.00</td>
                <td class="quantity"><label>QTY </label><input type="text" class="qty" value="2"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
                <td class="subtotal"></td>
              </tr>
 
              <tr>
                <td class="name">Beef</td>
-               <td class="price">40.00</td>
+               <td class="price">$40.00</td>
                <td class="quantity"><label>QTY </label><input type="text" class="qty" value="4"><button type="reset" value="cancel" class="cancel">Cancel</button></td>
                <td class="subtotal"></td>
              </tr>
